@@ -17,12 +17,7 @@
 \usage{
 
 \special{R CMD Rdconv [options] file}
-#ifdef unix
 \special{R CMD Rd2dvi [options] files}
-#endif
-#ifdef windows
-\special{R CMD Rd2dvi.sh [options] files}
-#endif
 \special{R CMD Rd2txt [options] file}
 \special{R CMD Sd2Rd [options] file}
 }
